# fastapi-restapi

./: .env.example  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  pyproject.toml  run_dev.py
alembic/: env.py
alembic/versions/: 0001_create_tables.py
app/: main.py  seed.py
app/core/: config.py  logging.py
app/db/: session.py
app/models/: __init__.py  activity.py  building.py  organization.py  phone.py
app/routers/: buildings.py  deps.py  organizations.py
app/schemas/: activity.py  building.py  common.py  organization.py  phone.py
tests/: conftest.py  test_endpoints.http  test_endpoints.py  test_settings_di.py
