[project]
name = "fastapi-restapi"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.2",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "fastapi>=0.128.6",
    "httpx>=0.27.2",
    "pydantic-settings>=2.6.1",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]",
    "gunicorn",
]
